// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Autograder renders autograder results with different statuses correctly 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-help"
            tabindex="0"
          >
            <svg
              data-icon="help"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m1 13H7v-2h2zm1.93-6.52c-.14.32-.35.64-.62.97L9.25 8.83c-.12.15-.24.29-.28.42s-.09.3-.09.52V10H7.12V8.88s.05-.51.21-.71L8.4 6.73c.22-.26.35-.49.44-.68s.12-.38.12-.58c0-.3-.1-.55-.28-.75-.18-.19-.44-.28-.76-.28-.33 0-.59.1-.78.29s-.33.46-.4.81c-.03.11-.1.15-.2.14l-1.7-.25c-.12-.01-.16-.08-.14-.19.12-.82.46-1.47 1.03-1.94q.855-.72 2.25-.72c.47 0 .9.07 1.29.22s.72.34 1 .59.49.55.65.89c.15.35.22.72.22 1.12s-.07.75-.21 1.08"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no testcases provided for this question.
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div>
          <div
            class="results-header"
            data-testid="results-header"
          >
            <div
              class="header-data"
            >
              <div
                class="header-sn"
              >
                S/N
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="header-status"
              >
                Testcase status
                <span
                  aria-hidden="true"
                  class="bp6-icon bp6-icon-caret-down"
                >
                  <svg
                    data-icon="caret-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="header-expected"
            >
              Expected result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-actual"
            >
              Actual result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="ResultCard correct"
            data-testid="ResultCard"
          >
            <div
              class="bp6-card bp6-elevation-1"
            >
              <div
                class="result-data"
              >
                <div
                  class="result-idx"
                  data-testid="result-idx"
                >
                  1
                </div>
                <div
                  class="result-status"
                  data-testid="result-status"
                >
                  PASS
                </div>
              </div>
              <pre
                class="bp6-code-block result-expected"
                data-testid="result-expected"
              />
              <pre
                class="bp6-code-block result-actual"
                data-testid="result-actual"
              />
            </div>
          </div>
          <div
            class="ResultCard wrong"
            data-testid="ResultCard"
          >
            <div
              class="bp6-card bp6-elevation-1"
            >
              <div
                class="result-data"
              >
                <div
                  class="result-idx"
                  data-testid="result-idx"
                >
                  2
                </div>
                <div
                  class="result-status"
                  data-testid="result-status"
                >
                  FAIL
                </div>
              </div>
              <pre
                class="bp6-code-block result-expected"
                data-testid="result-expected"
              >
                8
              </pre>
              <pre
                class="bp6-code-block result-actual"
                data-testid="result-actual"
              >
                5
              </pre>
            </div>
          </div>
          <div
            class="ResultCard wrong"
            data-testid="ResultCard"
          >
            <div
              class="bp6-card bp6-elevation-1"
            >
              <div
                class="result-data"
              >
                <div
                  class="result-idx"
                  data-testid="result-idx"
                >
                  3
                </div>
                <div
                  class="result-status"
                  data-testid="result-status"
                >
                  ERROR
                </div>
              </div>
              <pre
                class="bp6-code-block result-expected"
                data-testid="result-expected"
              />
              <pre
                class="bp6-code-block result-actual"
                data-testid="result-actual"
              >
                [UNKNOWN] Autograder error: type dummyErrorType
              </pre>
            </div>
          </div>
          <div
            class="ResultCard wrong"
            data-testid="ResultCard"
          >
            <div
              class="bp6-card bp6-elevation-1"
            >
              <div
                class="result-data"
              >
                <div
                  class="result-idx"
                  data-testid="result-idx"
                >
                  4
                </div>
                <div
                  class="result-status"
                  data-testid="result-status"
                >
                  ERROR
                </div>
              </div>
              <pre
                class="bp6-code-block result-expected"
                data-testid="result-expected"
              />
              <pre
                class="bp6-code-block result-actual"
                data-testid="result-actual"
              >
                [SYSTEM] Cannot read property 'getUniformLocation' of null
              </pre>
            </div>
          </div>
          <div
            class="ResultCard wrong"
            data-testid="ResultCard"
          >
            <div
              class="bp6-card bp6-elevation-1"
            >
              <div
                class="result-data"
              >
                <div
                  class="result-idx"
                  data-testid="result-idx"
                >
                  5
                </div>
                <div
                  class="result-status"
                  data-testid="result-status"
                >
                  ERROR
                </div>
              </div>
              <pre
                class="bp6-code-block result-expected"
                data-testid="result-expected"
              />
              <pre
                class="bp6-code-block result-actual"
                data-testid="result-actual"
              >
                [TIMEOUT] Submission exceeded time limit for this test case.

[SYNTAX] Line 2: Missing semicolon at the end of statement
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autograder renders opaque testcases with different statuses correctly in AssessmentWorkspace 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-help"
            tabindex="0"
          >
            <svg
              data-icon="help"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m1 13H7v-2h2zm1.93-6.52c-.14.32-.35.64-.62.97L9.25 8.83c-.12.15-.24.29-.28.42s-.09.3-.09.52V10H7.12V8.88s.05-.51.21-.71L8.4 6.73c.22-.26.35-.49.44-.68s.12-.38.12-.58c0-.3-.1-.55-.28-.75-.18-.19-.44-.28-.76-.28-.33 0-.59.1-.78.29s-.33.46-.4.81c-.03.11-.1.15-.2.14l-1.7-.25c-.12-.01-.16-.08-.14-.19.12-.82.46-1.47 1.03-1.94q.855-.72 2.25-.72c.47 0 .9.07 1.29.22s.72.34 1 .59.49.55.65.89c.15.35.22.72.22 1.12s-.07.75-.21 1.08"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="testcaseCards"
        >
          <div
            class="testcases-header"
            data-testid="testcases-header"
          >
            <div
              class="header-fn"
            >
              Testcase
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-expected"
            >
              Expected result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-actual"
            >
              Actual result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="AutograderCard secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-placeholder"
                data-testid="testcase-placeholder"
              >
                Hidden testcase
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard correct secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-placeholder"
                data-testid="testcase-placeholder"
              >
                Hidden testcase
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-placeholder"
                data-testid="testcase-placeholder"
              >
                Hidden testcase
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-placeholder"
                data-testid="testcase-placeholder"
              >
                Hidden testcase
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no results to show.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autograder renders opaque testcases with different statuses correctly in GradingWorkspace 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-help"
            tabindex="0"
          >
            <svg
              data-icon="help"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m1 13H7v-2h2zm1.93-6.52c-.14.32-.35.64-.62.97L9.25 8.83c-.12.15-.24.29-.28.42s-.09.3-.09.52V10H7.12V8.88s.05-.51.21-.71L8.4 6.73c.22-.26.35-.49.44-.68s.12-.38.12-.58c0-.3-.1-.55-.28-.75-.18-.19-.44-.28-.76-.28-.33 0-.59.1-.78.29s-.33.46-.4.81c-.03.11-.1.15-.2.14l-1.7-.25c-.12-.01-.16-.08-.14-.19.12-.82.46-1.47 1.03-1.94q.855-.72 2.25-.72c.47 0 .9.07 1.29.22s.72.34 1 .59.49.55.65.89c.15.35.22.72.22 1.12s-.07.75-.21 1.08"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="testcaseCards"
        >
          <div
            class="testcases-header"
            data-testid="testcases-header"
          >
            <div
              class="header-fn"
            >
              Testcase
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-expected"
            >
              Expected result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-actual"
            >
              Actual result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="AutograderCard secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                add(3, 0);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                3
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                No Answer
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard correct secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                add(5, 2);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                7
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                7
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                add(-6, 6);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                0
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                12
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                add(-4, -7);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                -11
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                Line 3: Name a not declared.
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no results to show.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autograder renders placeholders correctly when testcases and results are empty 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-standard bp6-icon-caret-down"
        data-icon="caret-down"
      />
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-standard bp6-icon-help"
            data-icon="help"
            tabindex="0"
          />
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no testcases provided for this question.
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-standard bp6-icon-caret-down"
        data-icon="caret-down"
      />
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no results to show.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autograder renders public testcases with different statuses correctly 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-help"
            tabindex="0"
          >
            <svg
              data-icon="help"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m1 13H7v-2h2zm1.93-6.52c-.14.32-.35.64-.62.97L9.25 8.83c-.12.15-.24.29-.28.42s-.09.3-.09.52V10H7.12V8.88s.05-.51.21-.71L8.4 6.73c.22-.26.35-.49.44-.68s.12-.38.12-.58c0-.3-.1-.55-.28-.75-.18-.19-.44-.28-.76-.28-.33 0-.59.1-.78.29s-.33.46-.4.81c-.03.11-.1.15-.2.14l-1.7-.25c-.12-.01-.16-.08-.14-.19.12-.82.46-1.47 1.03-1.94q.855-.72 2.25-.72c.47 0 .9.07 1.29.22s.72.34 1 .59.49.55.65.89c.15.35.22.72.22 1.12s-.07.75-.21 1.08"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="testcaseCards"
        >
          <div
            class="testcases-header"
            data-testid="testcases-header"
          >
            <div
              class="header-fn"
            >
              Testcase
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-expected"
            >
              Expected result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-actual"
            >
              Actual result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="AutograderCard correct"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                "string";
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                "string"
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                "string"
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                fibonacci(2);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                2
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                No Answer
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard correct"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                fibonacci(3);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                2
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                2
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                fibonacci(4);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                3
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                4
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                fibonacci(5);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                5
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                Line 3: Name a not declared.
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no results to show.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autograder renders secret testcases with different statuses correctly 1`] = `
<DocumentFragment>
  <div
    class="Autograder"
  >
    <button
      class="bp6-button bp6-minimal collapse-button"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        <span>
          Testcases
        </span>
        <span
          class="bp6-popover-target"
        >
          <span
            aria-hidden="true"
            class="bp6-icon bp6-icon-help"
            tabindex="0"
          >
            <svg
              data-icon="help"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m1 13H7v-2h2zm1.93-6.52c-.14.32-.35.64-.62.97L9.25 8.83c-.12.15-.24.29-.28.42s-.09.3-.09.52V10H7.12V8.88s.05-.51.21-.71L8.4 6.73c.22-.26.35-.49.44-.68s.12-.38.12-.58c0-.3-.1-.55-.28-.75-.18-.19-.44-.28-.76-.28-.33 0-.59.1-.78.29s-.33.46-.4.81c-.03.11-.1.15-.2.14l-1.7-.25c-.12-.01-.16-.08-.14-.19.12-.82.46-1.47 1.03-1.94q.855-.72 2.25-.72c.47 0 .9.07 1.29.22s.72.34 1 .59.49.55.65.89c.15.35.22.72.22 1.12s-.07.75-.21 1.08"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="testcaseCards"
        >
          <div
            class="testcases-header"
            data-testid="testcases-header"
          >
            <div
              class="header-fn"
            >
              Testcase
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-expected"
            >
              Expected result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="header-actual"
            >
              Actual result
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-caret-down"
              >
                <svg
                  data-icon="caret-down"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="AutograderCard correct secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                "lorem";
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                "lorem"
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                "lorem"
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                is_prime(2);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                true
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                No Answer
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard correct secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                is_prime(3);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                true
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                true
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                is_prime(4);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                false
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                true
              </pre>
            </div>
          </div>
          <div
            class="AutograderCard wrong secret"
            data-testid="AutograderCard"
          >
            <div
              class="bp6-interactive bp6-card bp6-elevation-1"
            >
              <pre
                class="bp6-code-block testcase-program"
              >
                is_prime(5);
              </pre>
              <pre
                class="bp6-code-block testcase-expected"
              >
                true
              </pre>
              <pre
                class="bp6-code-block testcase-actual"
                data-testid="testcase-actual"
              >
                Line 3: Name a not declared.
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp6-button bp6-minimal collapse-button"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-caret-down"
      >
        <svg
          data-icon="caret-down"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp6-button-text"
      >
        Autograder Results
      </span>
    </button>
    <div
      class="bp6-collapse"
      style="height: auto; overflow-y: visible; transition: none;"
    >
      <div
        aria-hidden="false"
        class="bp6-collapse-body"
        style="transform: translateY(0); transition: none;"
      >
        <div
          class="noResults"
          data-testid="noResults"
        >
          There are no results to show.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
